Bug 166445 - systray on desktop not showing icons properly
Summary: systray on desktop not showing icons properly
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemtray (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 166384 166599 168089 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-13 14:14 UTC by Michal Svoboda
Modified: 2008-12-08 14:33 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (17.27 KB, image/png)
2008-07-13 14:17 UTC, Michal Svoboda
Details
Ugly repaint of systray icon (6.42 KB, image/png)
2008-12-08 14:33 UTC, gmud
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Svoboda 2008-07-13 14:14:33 UTC
Version:            (using KDE 4.0.83)
Installed from:    Compiled From Sources
Compiler:          gcc version 4.3.1 
OS:                Linux

1. remove all panels from the desktop or remove systray from the panel
2. place a systray widget on the desktop (not in panel)
3. at first, no icons show in the systray
4. resize/move the systray widget - icons jump wildly over the screen
5. rotate the systray widget - icons don't move
6. lock widgets - icons jump again, sometimes inside the widget, sometimes not
Comment 1 Michal Svoboda 2008-07-13 14:17:27 UTC
Created attachment 26081 [details]
screenshot
Comment 2 Aaron J. Seigo 2008-07-18 18:22:15 UTC
*** Bug 166599 has been marked as a duplicate of this bug. ***
Comment 3 Aaron J. Seigo 2008-07-18 18:22:43 UTC
*** Bug 166384 has been marked as a duplicate of this bug. ***
Comment 4 prasadae 2008-07-18 21:39:00 UTC
Same thing one two of my systems (OpenSuse 11.0 and Fedora 9) both running the current KDE 4.0.98.
But some how after some work, I can get them to settle in the systray then they "behave".
Comment 5 Jason Stubbs 2008-08-02 13:09:33 UTC
*** Bug 168089 has been marked as a duplicate of this bug. ***
Comment 6 Alex Merry 2008-08-12 18:35:35 UTC
SVN commit 845935 by alexmerry:

Fix system tray display on the desktop.

BUG: 166445



 M  +12 -6     systemtray.cpp  
 M  +5 -0      systemtraywidget.cpp  
 M  +1 -0      systemtraywidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=845935
Comment 7 Alex Merry 2008-08-12 18:50:26 UTC
SVN commit 845941 by alexmerry:

Fix system tray display on the desktop.

CCBUG: 166445



 M  +9 -9      systemtray.cpp  
 M  +5 -0      systemtraywidget.cpp  
 M  +1 -0      systemtraywidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=845941
Comment 8 Gilboa Davara 2008-08-13 11:19:12 UTC
Can this fix be applied cleanly against kdebase 4.1?

- Gilboa
Comment 9 Michal Svoboda 2008-08-18 16:44:44 UTC
still does not fully work (tried latest trunk) --

1. most obvious: systemtray can be moved away from already displayed icons
2. with resize, icons jump to a different place inside the applet; sometimes they even jump out - can be reproduced by shrinking the applet so small that no icons are displayed and then growing it again
3. when rotating the widget, icons do not rotate or move. (should they rotate or rearrange?)
Comment 10 Jason Stubbs 2008-08-18 16:55:49 UTC
1. Will not likely be fixed during 4.1 as the fix is not so trivial
2. Is what this bug is about :)
3. It's not possible for the individual icons to rotate. The best that can happen is that the positions of the icons relative to one another rotate. The current behaviour definitely won't be fixed during 4.1.
Comment 11 Jason Stubbs 2008-08-18 17:08:31 UTC
Test of the new bugs system. Please ignore. :)
Comment 12 Alan Braslau 2008-08-18 22:33:16 UTC
Using KDE 4.1.00 (debian experimental)

The system tray appears blank (no icons), even after kde startup. Curiously, removing the system tray from the panel then adding it back as a new widget works correctly (icons appear), except that this manipulation is necessary upon each restart of KDE...
Comment 13 Jason Stubbs 2008-08-19 04:37:25 UTC
(In reply to comment #12)
> The system tray appears blank (no icons), even after kde startup.

That is bug 168007.

This bug is about systray icons appearing outside the bounds of the applet when placed on the desktop.
Comment 14 Tony White 2008-08-19 16:04:47 UTC
Same here, Applet appears as a dot with no icons when dragged onto the desktop using OpenSuSe 11 & Kde 4.1 I don't really want a systray though. Can you guys maybe come up with some inventive new way to deal with apps that need something like a systray. It's like a windows way of doing things and as such seems a little obsolete and almost counter productive.
Comment 15 Michal Svoboda 2008-08-19 21:51:30 UTC
> 1. Will not likely be fixed during 4.1 as the fix is not so trivial

Care to explain to unsuspecting audience?
Comment 16 Jason 'vanRijn' Kasper 2008-08-21 07:15:27 UTC
Just adding a "me too"...
Comment 17 Alex Merry 2008-08-23 15:53:40 UTC
@Gilboa: the patch will be in KDE 4.1.1

@Tony White: A lot of applications (that we don't have control over) depend on the existence of a system tray.  There has been talk at FreeDesktop.org about a possible new system tray specification that will give us much more control over how the tray is presented, though, and hopefully get rid of a lot of the problems we currently have.

@kde@spatium.org:

The answer requires some knowledge of how plasma is implemented.  The desktop and panels (and hence all the widgets) are placed on a large canvas which has no knowledge of how it is displayed.  We then create windows that show parts of this canvas for the panel and the desktop.  This allows for the implementation of the dashboard, for example, by simply creating another window that shows the part of the canvas containing the current desktop.

The system tray specification, however, requires embedding small (22px by 22px) windows into the window that contains the system tray.  But the system tray widget is on the plasma canvas, which isn't a window, but can be displayed by one.  So we need to do some dark magic to get the system tray widget and the icons (which are really small windows) to line up.

Hopefully, we'll have a new system tray spec before too long that will allow us to grab proper icons (as in small pictures) together with extra information for menus etc. rather than windows.  That way, we can display the icons on the canvas without a problem.
Comment 18 Jason Stubbs 2008-11-19 03:36:55 UTC
Layouting on the desktop works properly now.
Comment 19 Tony White 2008-11-20 19:07:50 UTC
Nice going guys!
Comment 20 gmud 2008-12-08 14:33:29 UTC
Created attachment 29143 [details]
Ugly repaint of systray icon

I don't know if this is still the same bug, but in the latest Kubuntu packages (so maybe outdated qt package?) I still have this problem with a wrong repaint of systray icons. See screenshot.