Fix system tray display on the desktop.

BUG: 166445


svn path=/trunk/KDE/kdebase/workspace/; revision=845935